# postwing-python-sdk

./: CLAUDE.md  Makefile  README.md  pyproject.toml
examples/: async_example.py  logging_example.py
src/postwing/: __init__.py  exceptions.py  sdk.py
tests/: __init__.py  test_sdk.py
