[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "postwing"
version = "0.2.0"
description = "Python SDK for Postwing email service API (api.postwing.app)"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
authors = [
    {name = "Andrey Fanyagin", email = "skymanrm@gmail.com"}
]
keywords = ["email", "postwing", "sdk", "api", "email-service"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "faker>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/skymanrm/postwing-python-sdk"
Repository = "https://github.com/skymanrm/postwing-python-sdk"
Issues = "https://github.com/skymanrm/postwing-python-sdk/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
